--- a/css/login.css
+++ b/css/login.css
@@ -5,14 +5,20 @@ body {
     font-family: "Arial Rounded MT Bold";
     margin-left: auto;
     margin-right: auto;
-    max-width: 896px;
-    min-width: 256px;
+    max-width: 448px;
+    min-width: 128px;
     padding-top: 8px;
     padding-bottom: 24px;
     padding-left: 24px;
     padding-right: 24px;
 }
 .wrapper{ width: 350px; padding: 20px; }
+.logo-pic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
 
 html {
     background: gray;
