--- a/css/login.css
+++ b/css/login.css
@@ -1,34 +1,46 @@
-body {
-    background-color: white;
-    border: 5px solid cadetblue;
-    border-radius: 16px;
-    font-family: "Arial Rounded MT Bold";
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 448px;
-    min-width: 128px;
-    padding-top: 8px;
-    padding-bottom: 24px;
-    padding-left: 24px;
-    padding-right: 24px;
+body, html {
+    background-color: black;
 }
-.wrapper{ width: 350px; padding: 20px; }
+
+.login-container {
+    display: flex;
+    justify-content: center;
+}
+
+.inlog-form {
+    background-color: white;
+    border: 7.5px solid cadetblue;
+    border-radius: 30px;
+    font-family: "Arial Rounded MT Bold";
+    margin-top: 30px;
+    width: 400px;
+}
+
+.text {
+    text-align: center;
+}
+.reset-text {
+    text-align: center;
+}
 .logo-pic {
     display: block;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-  }
-
-html {
-    background: gray;
 }
+.form-group {
+    display: block;
+    margin: 10px 10px;
+    
+    text-align: center;
+    }
+
 figure{
     width:300px;
     overflow:hidden;
     margin:0;
 }
 figure img{
-    display:block;
+    display:inline-block;
     width:70%;
 }
